add swagger doc annotation
