# server/router/v1/user_passwd.go
@@ -16,6 +16,14 @@ func NewUserPasswd() UserPasswd {
 	return UserPasswd{}
 }
 
+// All godoc
+// @Summary     获取所有的平台密码
+// @Tags         UserPasswd
+// @Produce      json
+// @Success      200  {object}  []service.UserAccount   "成功"
+// @Failure      400  {object}  errcode.Error 			"请求错误"
+// @Failure      500  {object}  errcode.Error 			"内部错误"
+// @Router       /api/v1/userpasswd [get]
 func (up UserPasswd) All(c *gin.Context) {
 	srv := service.NewService(c)
 	pager := page.NewPager(c)
@@ -30,6 +38,16 @@ func (up UserPasswd) All(c *gin.Context) {
 	resp.ToList(userAccounts, pager)
 }
 
+// Get godoc
+// @Summary     获取单个用户的单个平台密码
+// @Tags         UserPasswd
+// @Produce      json
+// @Param        user_id   		path      int  true  "user ID"
+// @Param        platform_id    path      int  true  "platform ID"
+// @Success      200  {object}  service.UserAccount "成功"
+// @Failure      400  {object}  errcode.Error 		"请求错误"
+// @Failure      500  {object}  errcode.Error 		"内部错误"
+// @Router       /userpasswd/:user_id/:platform_id [get]
 func (up UserPasswd) Get(c *gin.Context) {
 	srv := service.NewService(c)
 
@@ -58,6 +76,15 @@ func (up UserPasswd) Get(c *gin.Context) {
 	resp.To(userAccount)
 }
 
+// List godoc
+// @Summary     获取单个用户的平台密码分页
+// @Tags         UserPasswd
+// @Produce      json
+// @Param        user_id   		path      int  true  "user ID"
+// @Success      200  {object}  service.UserAccount "成功"
+// @Failure      400  {object}  errcode.Error 		"请求错误"
+// @Failure      500  {object}  errcode.Error 		"内部错误"
+// @Router       /userpasswd/:user_id [get]
 func (up UserPasswd) List(c *gin.Context) {
 	srv := service.NewService(c)
 	user_id, err := strconv.Atoi(c.Param("user_id"))
@@ -79,6 +106,18 @@ func (up UserPasswd) List(c *gin.Context) {
 	resp.ToList(userAccounts, pager)
 }
 
+// Create godoc
+// @Summary     创建单个用户的单个平台密码
+// @Tags         UserPasswd
+// @Accept       json
+// @Produce      json
+// @Param user_id	 	body string true  	"用户 id"
+// @Param platform_id	body string true  	"平台 id"
+// @Param password	 	body string true 	"用户平台密码"
+// @Success      200  {string}  string			"成功"
+// @Failure      400  {object}  errcode.Error 	"请求错误"
+// @Failure      500  {object}  errcode.Error 	"内部错误"
+// @Router       /userpasswd [post]
 func (up UserPasswd) Create(c *gin.Context) {
 	srv := service.NewService(c)
 	params := new(service.UserAccountCreateRequest)
@@ -100,6 +139,18 @@ func (up UserPasswd) Create(c *gin.Context) {
 
 }
 
+// Update godoc
+// @Summary     更新单个用户的单个平台密码
+// @Tags         UserPasswd
+// @Accept       json
+// @Produce      json
+// @Param user_id	 	body string true  	"用户 id"
+// @Param platform_id	body string true  	"平台 id"
+// @Param password	 	body string true 	"用户平台密码"
+// @Success      200  {string}  string			"成功"
+// @Failure      400  {object}  errcode.Error 	"请求错误"
+// @Failure      500  {object}  errcode.Error 	"内部错误"
+// @Router       /userpasswd/:user_id/:platform_id [put]
 func (up UserPasswd) Update(c *gin.Context) {
 	srv := service.NewService(c)
 
@@ -134,6 +185,17 @@ func (up UserPasswd) Update(c *gin.Context) {
 	resp.Ok()
 }
 
+// Delete godoc
+// @Summary     删除单个用户的单个平台密码
+// @Tags         UserPasswd
+// @Accept       json
+// @Produce      json
+// @Param user_id	 	body string true  	"用户 id"
+// @Param platform_id	body string true  	"平台 id"
+// @Success      200  {string}  string			"成功"
+// @Failure      400  {object}  errcode.Error 	"请求错误"
+// @Failure      500  {object}  errcode.Error 	"内部错误"
+// @Router       /userpasswd/:user_id/:platform_id [delete]
 func (up UserPasswd) Delete(c *gin.Context) {
 	srv := service.NewService(c)
 	uId, err0 := strconv.Atoi(c.Param("user_id"))
@@ -161,6 +223,16 @@ func (up UserPasswd) Delete(c *gin.Context) {
 	resp.Ok()
 }
 
+// DeleteList godoc
+// @Summary     删除单个用户的单个平台密码
+// @Tags         UserPasswd
+// @Accept       json
+// @Produce      json
+// @Param user_id	 	body string true  	"用户 id"
+// @Success      200  {string}  string			"成功"
+// @Failure      400  {object}  errcode.Error 	"请求错误"
+// @Failure      500  {object}  errcode.Error 	"内部错误"
+// @Router       /userpasswd/:user_id [delete]
 func (up UserPasswd) DeleteList(c *gin.Context) {
 	srv := service.NewService(c)
 	uId, err := strconv.Atoi(c.Param("user_id"))
